--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,5 @@
-log4j.rootLogger=debug, stdout, R
+log4j.rootLogger=INFO, stdout, R
+log4j.logger.com.jpeterson=TRACE
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
