--- a/modules/je/pom.xml
+++ b/modules/je/pom.xml
@@ -5,10 +5,16 @@
 
   <!-- The Basics -->
   <groupId>com.jpeterson</groupId>
-  <artifactId>littleS3-api</artifactId>
+  <artifactId>littleS3-je</artifactId>
   <version>2.0.0</version>
   <packaging>jar</packaging>
   <dependencies>
+    <dependency>
+      <groupId>com.jpeterson</groupId>
+      <artifactId>littles3-api</artifactId>
+      <version>2.0.0</version>
+      <scope>compile</scope>
+    </dependency>
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
@@ -37,6 +43,12 @@
       <groupId>jdom</groupId>
       <artifactId>jdom</artifactId>
       <version>1.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>je</groupId>
+      <artifactId>je</artifactId>
+      <version>3.2.23</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
