--- a/modules/filesystem/pom.xml
+++ b/modules/filesystem/pom.xml
@@ -5,25 +5,13 @@
 
   <!-- The Basics -->
   <groupId>com.jpeterson</groupId>
-  <artifactId>littleS3</artifactId>
+  <artifactId>littleS3-filesystem</artifactId>
   <version>2.0.0</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <dependencies>
     <dependency>
       <groupId>com.jpeterson</groupId>
       <artifactId>littles3-api</artifactId>
-      <version>2.0.0</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.jpeterson</groupId>
-      <artifactId>littles3-filesystem</artifactId>
-      <version>2.0.0</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.jpeterson</groupId>
-      <artifactId>littles3-je</artifactId>
       <version>2.0.0</version>
       <scope>compile</scope>
     </dependency>
@@ -56,12 +44,6 @@
       <artifactId>jdom</artifactId>
       <version>1.0</version>
       <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.3</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>jmock</groupId>
