--- a/modules/je/pom.xml
+++ b/modules/je/pom.xml
@@ -16,6 +16,12 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>com.jpeterson</groupId>
+      <artifactId>littles3-filesystem</artifactId>
+      <version>2.0.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
       <version>1.3</version>
