--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -135,8 +135,17 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-        <version>2.0</version>
+        <version>2.1-alpha-2</version>
         <configuration>
+          <archive>
+            <manifest>
+              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+            </manifest>
+            <manifestEntries>
+              <Weblogic-Application-Version>${project.version}</Weblogic-Application-Version>
+            </manifestEntries>
+          </archive>
           <webResources>
             <resource>
               <targetPath>META-INF</targetPath>
